[package]
name = "esp-temperature"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true
opt-level = "z"
panic = "abort"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.47.1", default-features = false }
anyhow = "1.0.75"
esp-idf-hal = "0.42.1"
serde_json = "1.0.107"
serde = "1.0.189"
# change this to upstream when my PR that implements std::error::Error gets merged
adafruit-aht10 = { git = "https://github.com/miathedev/adafruit-aht10" }

[build-dependencies]
embuild = "0.31.3"
